menu: fix scrollbar height #180

--- a/static/css/variant.css
+++ b/static/css/variant.css
@@ -14,6 +14,10 @@ a:hover,
     color: var(--MAIN-LINK-HOVER-color);
 }
 
+#sidebar {
+    background-color: var(--MENU-SECTIONS-BG-color);
+}
+
 #header-wrapper {
     background-color: var(--MENU-HEADER-BG-color);
     color: var(--MENU-SEARCH-color, #ffffff);
@@ -23,10 +27,6 @@ a:hover,
 .searchbox {
     border-color: var(--MENU-SEARCH-BOX-color);
     background-color: var(--MENU-SEARCH-BG-color);
-}
-
-#sidebar {
-    background-color: var(--MENU-SECTIONS-BG-color);
 }
 
 #sidebar a {
@@ -44,7 +44,8 @@ a:hover,
 
 #sidebar ul li.active > a {
     background-color: var(--MENU-SECTION-ACTIVE-CATEGORY-BG-color);
-    color: var(--MENU-SECTION-ACTIVE-CATEGORY-color) !important;
+    color: var(--
+    );
 }
 
 #sidebar ul li.visited > a .read-icon {
